[package]
name = "antisleep"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std  = { version = "1.12.0", features = ["attributes"] }
env_logger = "0.9.0"
log        = "0.4.17"
rand       = "0.8.5"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-strz = "1.1.1"
tide       = { version = "0.16.0", features = ["h1-server"], default-features = false }
toml       = "0.5.9"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_Threading",
]